Handle humongous object hashcode expansion in Shen